# codility

./: CMakeLists.txt  check.h
01-time-complexity/: CMakeLists.txt  frog_jmp.cc  frog_jmp.h  frog_jmp.txt  perm_missing_elem.cc  perm_missing_elem.h  perm_missing_elem.txt  tape_equilibrium.cc  tape_equilibrium.h  tape_equilibrium.txt
02-counting-elements/: CMakeLists.txt  frog_river_one.cc  frog_river_one.h  frog_river_one.txt  max_counters.cc  max_counters.h  max_counters.txt  missing_integer.cc  missing_integer.h  missing_integer.txt  perm_check.cc  perm_check.h  perm_check.txt
03-prefix-sums/: CMakeLists.txt  count_div.cc  count_div.h  count_div.txt  passing_cars.cc  passing_cars.h  passing_cars.txt
04-sorting/: CMakeLists.txt  distinct.cc  distinct.h  distinct.txt  max_product_of_three.cc  max_product_of_three.h  max_product_of_three.txt  triangle.cc  triangle.h  triangle.txt
05-stacks-and-queues/: CMakeLists.txt  brackets.cc  brackets.h  brackets.txt  fish.cc  fish.h  fish.txt  nesting.cc  nesting.h  nesting.txt  stone_wall.cc  stone_wall.h  stone_wall.txt
06-leader/: CMakeLists.txt  dominator.cc  dominator.h  equi_leader.cc  equi_leader.h  equi_leader.txt
07-maximum-slice-problem/: CMakeLists.txt  max_profit.cc  max_profit.h  max_profit.txt  max_slice_sum.cc  max_slice_sum.h  max_slice_sum.txt
08-prime-and-composite-numbers/: CMakeLists.txt  count_factors.cc  count_factors.h  count_factors.txt  min_perimeter_rectangle.cc  min_perimeter_rectangle.h  min_perimeter_rectangle.txt  peaks.cc  peaks.h  peaks.h.autosave  peaks.txt
(+8 files in other folders)
